# ros2-robotic-arm-sim

./: README.md
bcr_arm/: CHANGELOG.rst  package.xml
bcr_arm_description/: CHANGELOG.rst  package.xml
bcr_arm_description/urdf/robots/bcr_arm/: bcr_arm.usd
bcr_arm_description/urdf/robots/bcr_arm/configuration/: bcr_arm_physics.usd  bcr_arm_robot.usd  bcr_arm_sensor.usd
bcr_arm_gazebo/: CHANGELOG.rst  package.xml
bcr_arm_moveit_config/: CHANGELOG.rst  package.xml
bcr_arm_moveit_config/config/: joint_limits.yaml
bcr_arm_ros2/: CHANGELOG.rst  package.xml
isaacsim/: bcr_arm_scene_2.usda
